12/9/13 Basics: adjust drag bounds of pH probe
12/9/13 Basics: pH meter body is not draggable, so don't make the body a 'Movable'
12/9/13 use same line width for button border and vertical separator in combo box, sun#42
12/9/13 Basics: add rounded rectangle around '(Neutral) 7' tick label, fill with 'neutral' color
12/9/13 Basics: fix wire control points on pH meter
12/9/13 Basics: change pH tick label to '(Neutral) 7'
12/9/13 Basics: adjust location of combo box
12/9/13 Basics: adjust drag bounds for dropper, so that it's above new beaker location and doesn't overlap water faucet touchArea
12/9/13 reflect water faucet so that it points left, adjust location of 'Water' label
12/9/13 Basics: move beaker to right side of screen, move pH meter to left side of screen
12/9/13 make volume value bold
12/9/13 horizontally flip pH probe, connect wire to left side (control points for wire are wrong)
12/9/13 Basics: move pH indicator to right side of pH scale
12/9/13 move ticks to right side of pH scale
12/9/13 add a color-stop for 'neutral' to pH scale gradient (RGB=164,58,149)
12/9/13 use specified color for 'Chicken Soup'
12/9/13 rename Solute.LIME_SODA to Solute.SODA
12/7/13 flatten faucet type hierarchy, in preparation for reflecting water faucet
12/7/13 change request: add 'Chicken Soup', make it the default
12/6/13 feature request: add highlight around pH value display when the displayed value is '7.00'
12/5/13 add options for SoluteComboBox: increase lineWidth and cornerRadius
12/4/13 Solutions: partial implementation of linear concentration graph
12/4/13 add 'Basics' screen to 'pH Scale' sim only in dev mode                                                                                                                   42
12/3/13 use saturated blue (as shown in design doc) for 'H2O' background in 'Molecule count' and graph indicator
12/3/13 use water color as the 'diluted' color for all solutions, as shown in the design doc